Regisztráció segédletek készitése tooltip jelszó és email ellenörző

--- a/html/profile.html
+++ b/html/profile.html
@@ -384,24 +384,25 @@
       <div ng-if="selectedSection === 'myBookings'" 
            ng-init="loadBookings()">
         <h3 class="text-center mb-4">
+          <i class="fa-solid fa-calendar-check me-2"></i>
             {{ lang.data.my_bookings }}
           </h3>
         <table class="table table-bordered" 
                ng-if="bookings.length > 0">
-            <thead class="table-dark">
+            <thead class="table-dark text-capitalize">
                 <tr>
-                    <th>{{ lang.data.package_name }}</th>
                     <th>{{ lang.data.date }}</th>
                     <th>{{ lang.data.time }}</th>
+                    <th>{{ lang.data.package_name }}</th>
                     <th>{{ lang.data.price }}</th>
                     <th>{{ lang.data.operation }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="booking in bookings">
-                    <td>{{ lang.data[booking.package] }}</td>
                     <td>{{ booking.date }}</td>
                     <td>{{ booking.time }}</td>
+                    <td>{{ lang.data[booking.package] }}</td>
                     <td>{{ booking.price | currency:'' :0 }} Ft</td>
                     <td>
                       <button class="btn btn-danger btn-sm"
