--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-custom navbar navbar-expand-sm 
+<footer class="footer-custom navbar navbar-expand-lg 
                text-white mt-5 border-primary rounded-3">
   <div class="container w-auto py-4">
     <div class="row justify-content-between">
