navbar logo és forditások placeholderknek, max length

--- a/html/header.html
+++ b/html/header.html
@@ -1,8 +1,15 @@
-<nav
-  class="header-custom navbar navbar-expand-xl
-         text-white fs-5 border-primary"
+<nav class="header-custom navbar navbar-expand-xl
+            text-white fs-5 border-primary"
   data-bs-theme="dark">
   <div class="container-fluid">
+
+    <!----------Logo beillesztése------------>
+    <a class="navbar-brand" 
+       href="#">
+      <img ng-src="media/image/header/navbar_logo_edited.png" 
+           alt="Logo" 
+           height="40">
+    </a>
 
     <!---------Hamburger icon---------------->
     <button
