--- a/html/login.html
+++ b/html/login.html
@@ -66,7 +66,7 @@
                      text-white border-secondary"
               name="password"
               type="{{model.showPassword ? 'text' : 'password'}}"
-              placeholder="Jelszó"
+              placeholder="{{lang.data.password}}"
               spellcheck="false"
               autocomplete="off"
               required
