--- a/html/modal.html
+++ b/html/modal.html
@@ -8,7 +8,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content text-dark">
 			<div class="modal-header">
-				<i class="fa-3x" n
+				<i class="fa-3x"
 				   g-class="$root.message.icon"></i>
 			</div>
 			<div class="modal-body">
@@ -27,7 +27,7 @@
 						class="btn btn-secondary px-4" 
 						data-bs-dismiss="modal"
 						ng-if="$root.message.event">
-					Mégse
+					{{lang.data.cancel}}
 				</button>
 			</div>
 		</div>
