--- a/html/profile.html
+++ b/html/profile.html
@@ -115,7 +115,7 @@
                       class="form-control"
                       name="first_name"
                       type="text"
-                      placeholder="Keresztnév"
+                      placeholder="{{lang.data.first_name}}"
                       spellcheck="false"
                       autocomplete="off"
                       maxlength="100"
@@ -140,7 +140,7 @@
                       class="form-control"
                       name="last_name"
                       type="text"
-                      placeholder="Vezetéknév"
+                      placeholder="{{lang.data.last_name}}"
                       spellcheck="false"
                       autocomplete="off"
                       maxlength="100"
@@ -215,7 +215,7 @@
                       id="profile-country"
                       name="country"
                       type="text"
-                      placeholder="ország"
+                      placeholder="{{lang.data.country}}"
                       class="form-control"
                       spellcheck="false"
                       autocomplete="off"
@@ -251,7 +251,7 @@
                         id="profile-phone"
                         name="phone"
                         type="tel"
-                        placeholder="telefonszám"
+                        placeholder="{{lang.data.phone}}"
                         class="form-control"
                         spellcheck="false"
                         autocomplete="off"
@@ -287,7 +287,7 @@
                       id="profile-city"
                       name="city"
                       type="text"
-                      placeholder="város"
+                      placeholder="{{lang.data.city}}"
                       class="form-control"
                       spellcheck="false"
                       autocomplete="off"
@@ -312,7 +312,7 @@
                       id="profile-postcode"
                       name="postcode"
                       type="text"
-                      placeholder="irányítószám"
+                      placeholder="{{lang.data.postcode}}"
                       class="form-control"
                       spellcheck="false"
                       autocomplete="off"
@@ -353,7 +353,7 @@
                     <textarea
                       id="profile-address"
                       name="address"
-                      placeholder="cím"
+                      placeholder="{{lang.data.address}}"
                       class="form-control"
                       spellcheck="false"
                       autocomplete="off"
@@ -419,8 +419,6 @@
             {{ lang.data.no_bookings }}
         </div>
       </div>
-
-      
     </div>
   </div>
 </div>
