regisztráácios felület javítás

--- a/html/register.html
+++ b/html/register.html
@@ -235,8 +235,7 @@
                         ng-model="model.register.password"
                         ng-class="{
                             'is-invalid': model.register.password &&
-                             !isPasswordValid(model.register.password)
-                        }">
+                             !isPasswordValid(model.register.password)}">
                     
                     <!-- Pipa vagy X az input mező végében -->
                     <i class="fa-solid position-absolute top-50 end-0 translate-middle-y me-5"
