--- a/html/profile.html
+++ b/html/profile.html
@@ -1,13 +1,11 @@
 <div class="container mt-4 mb-4">
-  <div
-    class="card shadow-lg"
-    style="
-      width: 100%;
-      min-height: 500px;
-      height: auto;
-      display: flex;
-      flex-direction: row;
-      border-radius: 15px;">
+  <div class="card shadow-lg"
+       style=" width: 100%;
+               min-height: 500px;
+               height: auto;
+               display: flex;
+               flex-direction: row;
+               border-radius: 15px;">
 
     <!--------------------Odalmenü sáv------------------->
       <div
@@ -33,6 +31,7 @@
           </li>
         </ul>
       </div>
+      
     <!---------------Fő tartalom-------------------------->
     <div class="p-4 flex-grow-1 overflow-auto">
 
@@ -244,7 +243,7 @@
                         class="form-control"
                         autocomplete="off"
                         maxlength="10"
-                        ng-model="user.countryCode"
+                        ng-model="user.country_code"
                         ng-clear-icon='{"left":"100px"}'
                         style="max-width: 100px">
                       <input
