--- a/html/profile.html
+++ b/html/profile.html
@@ -8,10 +8,9 @@
                border-radius: 15px;">
 
     <!--------------------Odalmenü sáv------------------->
-      <div
-        class="p-4 bg-dark border-end border-radius"
-        ng-init="selectedSection = 'personal'"
-        style="width: 250px; border-radius: 15px 0 0 15px">
+      <div class="p-4 bg-dark border-end border-radius"
+           ng-init="selectedSection = 'personal'"
+           style="width: 250px; border-radius: 15px 0 0 15px">
         <ul class="list-unstyled">
           <li
             class="mb-3 pointer py-2 px-3 rounded-pill"
@@ -31,7 +30,7 @@
           </li>
         </ul>
       </div>
-      
+
     <!---------------Fő tartalom-------------------------->
     <div class="p-4 flex-grow-1 overflow-auto">
 
