--- a/html/header.html
+++ b/html/header.html
@@ -209,12 +209,11 @@
         <div>
           <li class="nav-item dropdown mx-1">
             <a class="nav-link dropdown-toggle" 
-              href="#" 
-              role="button"
-              data-bs-toggle="dropdown" 
-              aria-expanded="false"
-              data-bs-toggle="collapse"
-              data-bs-target=".navbar-collapse.show">
+               role="button"
+               data-bs-toggle="dropdown" 
+               aria-expanded="false"
+               data-bs-toggle="collapse"
+               data-bs-target=".navbar-collapse.show">
               <img class="me-1" 
                   height="32" 
                   alt="flag"
@@ -231,8 +230,7 @@
                   ng-click="methods.languageChanged(x.id)"
                   data-bs-toggle="collapse"
                   data-bs-target=".navbar-collapse.show">
-                <a class="dropdown-item" 
-                  href="#">
+                <a class="dropdown-item">
                   <img class="me-1" 
                       height="32" 
                       alt="flag"
